# ibid

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  TODO.md  docker-entrypoint.sh  fly.toml  ibid.example.toml  pyproject.toml
.github/workflows/: ci.yml
src/ibid/: __init__.py  __main__.py  config.py  core.py  db.py  event.py  import_legacy.py  plugin.py  utils.py
src/ibid/irc/: __init__.py  client.py  protocol.py
src/ibid/plugins/: __init__.py  ascii.py  calc.py  chatter.py  choose.py  convert.py  core.py  factoid.py  geography.py  insult.py  karma.py  memo.py  quotes.py  remind.py  seen.py  strings.py  urlinfo.py  websearch.py
src/ibid/sources/: __init__.py  base.py  discord_source.py  irc.py
tests/: conftest.py  test_addressing.py  test_config.py  test_irc_protocol.py  test_new_plugins.py  test_plugins_integration.py
